Sat  01 Oct 2011 11:04:00 BST - Release 0.92
  Add a Catalyst::Action::DeserializeMultiPart, allowing one part of a multipart
  request to be deserialized as the REST data (allowing other parts to be used for
  file uploads, for example) (bphillips)

Thu  04 Aug 2011 14:37:21 CEST - Release 0.91
  For the deserialization action class, make the HTTP methods it operates on
  configurable on a per-action level (plu, rafl).

Fri  25 Feb 2011 13:56:00 GMT - Release 0.90
  Remove test which is no longer applicable and fails in the latest Catalyst
  release.

Mon  24 Jan 2011 21:57:42 GMT - Release 0.89
  All classes are now made immutable. (Dave Rolsky)

  Added a Catalyst::Action::REST::ForBrowsers class. This will try to dispatch
  GET requests to a foo_GET_html method before trying foo_GET. (Dave Rolsky)

Tue  11 Jan 2011 23:07:00 GMT - Release 0.88
  Fix documentation for overriding Serialize and Deserialize actions
  in Catalyst::Controller::REST.

  Avoid warning with empty response bodies and new Catalyst version
  (>= 5.80030)

  Returning a body of '' is now possible - Catalyst::Action::Serialize
  acts like Catalyst::Action::RenderView (>= 0.16) by using the has_body
  predicate in Catalyst::Response (>= 5.80030)

Wed  3 Nov 2010 19:46:00 GMT - Release 0.87

  Fix Request class role when used with new Moose and other request
  class roles.

Wed  1 Sept 2010 23:14:00 BST - Release 0.86

  Add rest_serializer_json_options config key useable to set options
  like relaxed => 1 to be passed to the JSON serializer (Ton Voon)

  Make Data::Dumper unserializer safer by using a Safe compartment (Ton Voon)

Thu 13 May 2010 10:09:19 CEST - Release 0.85

  Make Catalyst::Action::Serialize::View return directly rather than serializing
  a response for 3XX status codes. This stops back-compat breakage from the
  previous change (in 0.84), whilst also allowing actual data serializers
  to still handle 3XX.
